# bee-hive-finding

./: CMakeLists.txt  README.md  bee-hive-finding.atta
resources/: box.stl
src/: beeComponent.cpp  beeComponent.h  beeScript.cpp  beeScript.h  common.h  globalComponent.cpp  globalComponent.h  hiveComponent.cpp  hiveComponent.h  projectScript.cpp  projectScript.h
